--- a/1-hide-show.html
+++ b/1-hide-show.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>隐藏与显示之二级菜单</title>
+		<title>隐藏与显示</title>
 		<script src="./lib/jquery-3.4.1.min.js"></script>
 		<style type="text/css">
 			#d1,#d2,#d3{
